cmake_minimum_required(VERSION 3.13)
project(数据结构一)

set(CMAKE_CXX_STANDARD 11)

add_executable(A1051 栈的应用A1051/栈的应用A1051.cpp)
add_executable(codeup1918 栈的应用codeup1918/栈的应用codeup1918.cpp)
add_executable(codeup1982 栈的应用codeup1982/栈的应用codeup1982.cpp)
add_executable(A1032 链表处理A1032/链表处理A1032.cpp)
add_executable(A1052 链表处理A1052/链表处理A1052.cpp)
add_executable(A1097 链表处理A1097/链表处理A1097.cpp)
add_executable(B1025_A1074 链表处理B1025_A1074/链表处理B1025_A1074.cpp)
add_executable(codeup1326 链表处理codeup1326/链表处理codeup1326.cpp)
add_executable(codeup1870 链表处理codeup1870/链表处理codeup1870.cpp)
add_executable(codeup2421 链表处理codeup2421/链表处理codeup2421.cpp)
add_executable(codeup2453 链表处理codeup2453/链表处理codeup2453.cpp)
add_executable(codeup3596 链表处理codeup3596/链表处理codeup3596.cpp)
add_executable(codeup3597 链表处理codeup3597/链表处理codeup3597.cpp)
add_executable(A1056 队列的应用A1056/队列的应用A1056.cpp)