cmake_minimum_required(VERSION 3.13)
project(数据结构二)

set(CMAKE_CXX_STANDARD 11)
add_definitions(-D_DEBUG)
add_executable(A1043 二叉查找树A1043/二叉查找树A1043.cpp)
add_executable(A1020 二叉树的遍历A1020/二叉树的遍历A1020.cpp)
add_executable(A1086 二叉树的遍历A1086/二叉树的遍历A1086.cpp)
add_executable(A1102 二叉树的遍历A1102/二叉树的遍历A1102.cpp)
add_executable(codeup1096 二叉树的遍历codeup1096/二叉树的遍历codeup1096.cpp)
add_executable(codeup1905 二叉树的遍历codeup1905/二叉树的遍历codeup1905.cpp)
add_executable(codeup1910 二叉树的遍历codeup1910/二叉树的遍历codeup1910.cpp)
add_executable(codeup2014 二叉树的遍历codeup2014/二叉树的遍历codeup2014.cpp)
add_executable(A1004 树的遍历A1004/树的遍历A1004.cpp)
add_executable(A1053 树的遍历A1053/树的遍历A1053.cpp)
add_executable(A1079 树的遍历A1079/树的遍历A1079.cpp)
add_executable(A1090 树的遍历A1090/树的遍历A1090.cpp)
add_executable(A1094 树的遍历A1094/树的遍历A1094.cpp)
add_executable(A1064 二叉查找树A1064/A1064.cpp)
add_executable(A1099 二叉查找树A1099/A1099.cpp)
add_executable(codeup1773 二叉平衡树codeup1773/codeup1773.cpp 二叉平衡树codeup1773/avl.cpp)
add_executable(A1066 二叉平衡树A1066/A1066.cpp)
add_executable(p 并查集unamed/p.cpp)
add_executable(codeup1106 并查集codeup1106/codeup1106.cpp)
add_executable(codeup1953 并查集codeup1953/codeup1953.cpp)
add_executable(codeup2128 并查集codeup2128/codeup2128.cpp)
add_executable(codeup2130 并查集codeup2130/codeup2130.cpp)