cmake_minimum_required(VERSION 3.13)
project(8图算法)

set(CMAKE_CXX_STANDARD 11)

add_definitions(-D_DEBUG)
add_executable(A1034 图的遍历A1034/A1034.cpp)
add_executable(A1076 图的遍历A1076/A1076.cpp)
add_executable(A1013 图的遍历A1013/A1013.cpp)
add_executable(A1021 图的遍历A1021/A1021.cpp)
add_executable(A1003 最短路径A1003/A1003.cpp)
add_executable(A1018 最短路径A1018/A1018.cpp)
add_executable(A1030 最短路径A1030/A1030.cpp)
add_executable(A1072 图的遍历A1072/A1072.cpp)
add_executable(A1087 最短路径A1087/A1087.cpp)
add_executable(A1003_bellman 最短路径A1003_bellman/A1003_bellman.cpp)
