cmake_minimum_required(VERSION 3.13)
project(动态规划专题)

set(CMAKE_CXX_STANDARD 11)

add_executable(codeup1795 动态规划基础codeup1795/codeup1795.cpp)
add_executable(A1007 最大连续子序列和A1007/A1007.cpp)
add_executable(A1045_LIS 最长不下降子序列A1045/A1045.cpp)
add_executable(codeup2086 最大连续子序列和codeup2086/codeup2086.cpp)
add_executable(codeup21280 最长上升子序列codeup21280/codeup21280.cpp)
add_executable(codeup1132 最长公共子序列codeup1132/codeup1132.cpp)
add_executable(A1045_LCS 最长公共子序列A1045/A1045.cpp)
